--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "devDependencies": {
-    "react-scripts": "0.2.2"
+    "react-scripts": "0.3.0"
   },
   "dependencies": {
     "diff": "^3.0.0",
@@ -16,7 +16,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "test":  "react-scripts test"
   },
   "eslintConfig": {
     "extends": "./node_modules/react-scripts/config/eslint.js"
