--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.1",
   "private": true,
   "devDependencies": {
-    "react-scripts": "0.3.0"
+    "enzyme": "^2.4.1",
+    "react-addons-test-utils": "^15.3.2",
+    "react-scripts": "^0.3.1"
   },
   "dependencies": {
     "diff": "^3.0.0",
@@ -11,13 +13,14 @@
     "material-ui": "^0.15.4",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
+    "react-scripts": "^0.3.1",
     "react-tap-event-plugin": "^1.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "eject": "react-scripts eject",
-    "test":  "react-scripts test"
+    "test": "react-scripts test"
   },
   "eslintConfig": {
     "extends": "./node_modules/react-scripts/config/eslint.js"
