--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "material-ui": "^0.16.4",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
+    "react-ga": "^2.1.2",
     "react-scripts": "^0.3.1",
     "react-tap-event-plugin": "^2.0.0"
   },
